@startuml

title __POSTS's Class Diagram__\n

  namespace com.architectica.socialcomponents {
    namespace main.search {
      namespace posts {
        class com.architectica.socialcomponents.main.search.posts.SearchPostsFragment {
            - emptyListMessageTextView : TextView
            - progressBar : ProgressBar
            - recyclerView : RecyclerView
            - searchInProgress : boolean
            + SearchPostsFragment()
            + createPresenter()
            + hideLocalProgress()
            + onActivityResult()
            + onCreate()
            + onCreateView()
            + onSearchResultsReady()
            + openProfileActivity()
            + search()
            + showEmptyListLayout()
            + showLocalProgress()
            - initRecyclerView()
            - openPostDetailsActivity()
        }
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.search {
      namespace posts {
        class com.architectica.socialcomponents.main.search.posts.SearchPostsPresenter {
            {static} + LIMIT_POSTS_FILTERED_BY_LIKES : int
            - context : Context
            + SearchPostsPresenter()
            + search()
            + search()
            - filterByLikes()
            - handleSearchResult()
        }
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.search {
      namespace posts {
        interface com.architectica.socialcomponents.main.search.posts.SearchPostsView {
            {abstract} + hideLocalProgress()
            {abstract} + onSearchResultsReady()
            {abstract} + showEmptyListLayout()
            {abstract} + showLocalProgress()
        }
      }
    }
  }
  

  com.architectica.socialcomponents.main.search.posts.SearchPostsFragment .up.|> com.architectica.socialcomponents.main.search.Searchable
  com.architectica.socialcomponents.main.search.posts.SearchPostsFragment .up.|> com.architectica.socialcomponents.main.search.posts.SearchPostsView
  com.architectica.socialcomponents.main.search.posts.SearchPostsFragment -up-|> com.architectica.socialcomponents.main.base.BaseFragment
  com.architectica.socialcomponents.main.search.posts.SearchPostsFragment o-- com.architectica.socialcomponents.adapters.SearchPostsAdapter : postsAdapter
  com.architectica.socialcomponents.main.search.posts.SearchPostsPresenter -up-|> com.architectica.socialcomponents.main.base.BasePresenter
  com.architectica.socialcomponents.main.search.posts.SearchPostsPresenter o-- com.architectica.socialcomponents.managers.PostManager : postManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
